# sibna-protc

./: .gitignore  BUILD_FAILURES_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL_SPECIFICATION.md  README.md  SDK_AUDIT_REPORT_v3.0.1.md  SECURITY.md  SECURITY_FIXES_v3.0.1.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
audit/: AUDIT_REPORT.md  BASELINE_TESTS.txt  EXECUTIVE_BRIEF.md  FINAL_ATTACK_TESTS.txt  FINAL_CORE_TESTS.txt  FINDING_CATALOG.md  README.md  VERIFICATION.md  verification_report.md
audit/PATCHES/: 00-bincode-migration.md  01-crypto-pad-empty.md  02-crypto-encrypt-empty.md  03-kdf-argon2-mandatory.md  04-storage-device-id-persist.md  05-crypto-osrng-to-securerandom.md  06-keystore-is-valid-ed25519.md  07-keystore-from-bytes-low-order.md  08-handshake-responder-ephemeral.md  09-ratchet-decrypt-no-clone-on-fail.md  10-storage-manifest-mandatory.md  11-storage-lockfile-raii.md  12-manager-cover-traffic-random-id.md  13-test-updates.md  14-random-zeroize-os-bytes.md  15-server-ip-rate-limit-middleware.md  16-secure-compare-no-panic.md  17-p2p-expected-peer-identity-mandatory.md  18-x3dh-transcript-hash-symmetric.md  19-chain-cap-meets-skip-window.md  20-pad-message-extra-block-randomization.md  21-secure-memory-cross-platform.md  22-deserialize-state-prime-ratchet.md  23-sled-to-redb.md  24-mdns-privacy.md  25-p2p-x3dh-unification.md
audit/formal_verification/: sibna_v3.pv
core/: Cargo.toml  cbindgen.h
core/src/: error.rs  iot.rs  lib.rs  manager.rs  metadata.rs  rate_limit.rs  safety.rs  storage.rs  validation.rs  wasm.rs
core/src/crypto/: encryptor.rs  kdf.rs  mod.rs  padding.rs  random.rs  secure_compare.rs  secure_memory.rs
core/src/ffi/: mod.rs
core/src/group/: mod.rs
core/src/handshake/: builder.rs  check_out.txt  mod.rs  x3dh.rs
core/src/keystore/: mod.rs
core/src/media/: mod.rs
core/src/p2p/: discovery.rs  handshake.rs  mod.rs  nat.rs  node.rs  peer.rs  transport.rs
core/src/ratchet/: chain.rs  mod.rs  session.rs  state.rs
core/src/transport/: mod.rs  relay.rs
core/tests/: advanced_offensive_test.rs  integration.rs  offensive_test.rs  statistical_timing_test.rs  test_quantum_manual.rs
docs/: MATURITY_PROOF.md  SECURITY_INTERNAL.md  THREAT_MODEL.md
sdks/cpp/: CMakeLists.txt  README.md
sdks/cpp/include/sibna/: identity.hpp  session.hpp  types.hpp  utils.hpp
sdks/cpp/src/: context.cpp  crypto.cpp  group.cpp  identity.cpp  safety_number.cpp  session.cpp  utils.cpp
sdks/cpp/tests/: CMakeLists.txt  test_context.cpp  test_crypto.cpp  test_group.cpp  test_identity.cpp  test_safety_number.cpp  test_session.cpp  test_utils.cpp
sdks/dart/: README.md  pubspec.yaml
sdks/dart/lib/: sibna_protocol.dart
sdks/dart/lib/src/: context.dart  crypto.dart  identity.dart  session.dart
sdks/dart/test/: identity_test.dart  session_test.dart
sdks/flutter/: README.md  pubspec.yaml
sdks/flutter/lib/: sibna_flutter.dart
sdks/flutter/lib/src/: ffi_bindings.dart  group.dart  session.dart  sibna_flutter_base.dart
sdks/flutter/linux/: CMakeLists.txt
sdks/flutter/macos/: sibna_flutter.podspec
sdks/flutter/test/: session_test.dart  sibna_flutter_test.dart
sdks/flutter/windows/: CMakeLists.txt
sdks/go/: README.md  client.go  client_test.go  go.mod  go.sum
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/com/sibna/: SibnaClient.java  Utils.java
sdks/java/src/main/java/com/sibna/crypto/: CryptoProvider.java
sdks/java/src/main/java/com/sibna/exceptions/: AuthException.java  CryptoException.java  InvalidArgumentException.java  NetworkException.java  RateLimitException.java  SessionException.java  SibnaException.java
sdks/java/src/main/java/com/sibna/group/: GroupSession.java
sdks/java/src/main/java/com/sibna/identity/: IdentityKeyPair.java  PreKeyBundle.java
sdks/java/src/main/java/com/sibna/protocol/: DoubleRatchet.java  X3DHHandshake.java
sdks/java/src/main/java/com/sibna/transport/: HttpTransport.java
sdks/java/src/test/java/com/sibna/: IdentityTest.java  SessionTest.java
sdks/javascript/: README.md  package.json
sdks/javascript/src/: index.ts
sdks/javascript/tests/: sibna.test.ts
sdks/python/: README.md  requirements.txt  setup.py
sdks/python/sibna/: __init__.py  client.py
sdks/python/tests/: test_sibna.py
server/: Cargo.toml
server/src/: auth.rs  db.rs  main.rs  ws.rs
server/tests/: aggressive_tests.rs
src/: auth.rs  ws.rs
tests/: Cargo.toml  attack_tests.rs  integration_tests.rs  multi_device_tests.rs
