[package]
name = "sibna-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Sibna Protocol Server"
repository.workspace = true

[lib]
name = "sibna_server"
path = "src/main.rs"

[[bin]]
name = "sibna-server"
path = "src/main.rs"

[dependencies]
sibna-core = { path = "../core", features = ["std", "pqc", "argon2"] }
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "limit", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hex = "0.4.3"
redb = "2"
uuid = { version = "1.8", features = ["v4"] }
jsonwebtoken = "9.3"
sha2 = { workspace = true }
hmac = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dashmap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
lz4_flex = "0.11"
ed25519-dalek = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
jsonwebtoken = "9.3"
uuid = { version = "1.8", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
